syntax = "proto3";
option go_package = "example.com/m/main";

package sync;

service SyncService {
	rpc PushTrade (TradeRequest) returns (Empty) {}
}

message Empty {}

message TradeRequest {
	string  symbol 	   = 1;
	string  price 	   = 2;
	string  quantity   = 3;
	double  trade_time = 4;
	string  exchange   = 5;
}
